sub headline, description changed

--- a/client/index.html
+++ b/client/index.html
@@ -1,49 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Basic -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>DreamXec – Research Karega India Toh Badhega India</title>
-    <meta
-      name="description"
-      content="DreamXec is India's crowdfunding platform dedicated to turning student projects into real-world innovations. We connect the brightest young minds with the capital and mentorship they need to build a self-reliant future."
-    />
+<head>
+  <!-- Basic -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <title>DreamXec – Research Karega India Toh Badhega India</title>
+  <meta name="description"
+    content="We're India's first online platform that helps raise funds exclusivelly for student lead innovation projects. Our mission is to lead the unlocking of immense potential of India’s youth and transforming their innovative ideas into real-world impact. We are looking to energise research and innovation during college by creating a dynamic platform where students, mentors, and donors come together to shape the future. We are here to inspire the spirit of “Research Karega India, Toh Badega India”—believing that sincere efforts today will forge a prosperous, self-reliant, and vibrant India in the decades to come." />
 
-    <!-- Open Graph / LinkedIn -->
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="DreamXec" />
-      <meta property="og:title" content="DreamXec – Research Karega India, Toh Badhega India" />
-      <meta
-      property="og:description"
-      content="DreamXec is India's crowdfunding platform dedicated to turning student projects into real-world innovations. We connect the brightest young minds with the capital and mentorship they need to build a self-reliant future."
-    />
-    <meta property="og:url" content="https://dreamxec.com/" />
-    <meta property="og:image" content="https://dreamxec.com/og-image.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <!-- Image details (important for LinkedIn) -->
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/png" />
+  <!-- Open Graph / LinkedIn -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="DreamXec" />
+  <meta property="og:title" content="DreamXec – Research Karega India, Toh Badhega India" />
+  <meta property="og:description"
+    content="We're India's first online platform that helps raise funds exclusivelly for student lead innovation projects. Our mission is to lead the unlocking of immense potential of India’s youth and transforming their innovative ideas into real-world impact. We are looking to energise research and innovation during college by creating a dynamic platform where students, mentors, and donors come together to shape the future. We are here to inspire the spirit of “Research Karega India, Toh Badega India”—believing that sincere efforts today will forge a prosperous, self-reliant, and vibrant India in the decades to come." />
+  <meta property="og:url" content="https://dreamxec.com/" />
+  <meta property="og:image" content="https://dreamxec.com/og-image.png" />
 
-    <!-- Twitter / X -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DreamXec – Research Karega India, Toh Badhega India" />
-    <meta
-      name="twitter:description"
-      content="DreamXec is India's crowdfunding platform dedicated to turning student projects into real-world innovations. We connect the brightest young minds with the capital and mentorship they need to build a self-reliant future."
-    />
-    <meta name="twitter:image" content="https://dreamxec.com/og-image.png" />
-  </head>
+  <!-- Image details (important for LinkedIn) -->
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/png" />
 
-  <body>
-    <div id="root"></div>
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="DreamXec – Research Karega India, Toh Badhega India" />
+  <meta name="twitter:description"
+    content="We're India's first online platform that helps raise funds exclusivelly for student lead innovation projects. Our mission is to lead the unlocking of immense potential of India’s youth and transforming their innovative ideas into real-world impact. We are looking to energise research and innovation during college by creating a dynamic platform where students, mentors, and donors come together to shape the future. We are here to inspire the spirit of “Research Karega India, Toh Badega India”—believing that sincere efforts today will forge a prosperous, self-reliant, and vibrant India in the decades to come." />
+  <meta name="twitter:image" content="https://dreamxec.com/og-image.png" />
+</head>
 
-    <script type="module" src="/src/main"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  </body>
+<body>
+  <div id="root"></div>
+
+  <script type="module" src="/src/main"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+</body>
+
 </html>
