--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,20 @@
   <meta name="twitter:description"
     content="We're India's first online platform that helps raise funds exclusivelly for student lead innovation projects. Our mission is to lead the unlocking of immense potential of India’s youth and transforming their innovative ideas into real-world impact. We are looking to energise research and innovation during college by creating a dynamic platform where students, mentors, and donors come together to shape the future. We are here to inspire the spirit of “Research Karega India, Toh Badega India”—believing that sincere efforts today will forge a prosperous, self-reliant, and vibrant India in the decades to come." />
   <meta name="twitter:image" content="https://dreamxec.com/og-image.png" />
+
+  <!-- Google Analytics 4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0CKYCHSJW3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    window.gtag = gtag;
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-0CKYCHSJW3', {
+      send_page_view: false
+    });
+  </script>
 </head>
 
 <body>
